--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/morgan": "^1.9.4",
     "cors": "^2.8.5",
@@ -20,7 +21,6 @@
     "mariadb": "^3.2.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.5.2",
-    "sequelize": "^6.32.1",
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
@@ -28,6 +28,7 @@
     "@types/node": "^20.4.5",
     "concurrently": "^8.2.0",
     "nodemon": "^3.0.1",
+    "prisma": "^5.0.0",
     "typescript": "^5.1.6"
   }
 }
