--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@prisma/client": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/morgan": "^1.9.4",
+    "@types/multer": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mariadb": "^3.2.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.5.2",
     "ts-node-dev": "^2.0.0"
   },
