--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/cors": "^2.8.13",
     "@types/morgan": "^1.9.4",
     "@types/multer": "^1.4.7",
+    "aws-sdk": "^2.1427.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
