--- a/.sample.env
+++ b/.sample.env
@@ -4,4 +4,7 @@ DB_USER=root
 DB_PASSWORD=root
 PORT=9000
 DB_NAME=pesoappd_ocnew
-DATABASE_URL=localhost:3306
+DATABASE_URL=mysql://root:root@127.0.0.1:3306/pesoappd_ocnew
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_BUCKET_NAME=
