Update sample env

--- a/.sample.env
+++ b/.sample.env
@@ -8,3 +8,4 @@ DATABASE_URL=mysql://root:root@127.0.0.1:3306/pesoappd_ocnew
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_BUCKET_NAME=
+PESO_APP_TEMP=https://pesoapp.ph/peso_beta/api/5.2.16/url/
