--- a/.sample.env
+++ b/.sample.env
@@ -9,3 +9,4 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_BUCKET_NAME=
 PESO_APP_TEMP=https://pesoapp.ph/peso_beta/api/5.2.16/url/
+NODE_VERSION=18.16.0
