--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "nodemon": "^3.0.1",
     "prisma": "^5.0.0",
     "typescript": "^5.1.6"
+  },
+  "engines": {
+    "node": ">=14 <15"
   }
 }
