--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.5.2",
+    "pusher": "^5.1.3",
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
