Update sample env

--- a/.sample.env
+++ b/.sample.env
@@ -1,12 +1,10 @@
-DB_HOST=127.0.0.1
-DB_PORT=6500
-DB_USER=root
-DB_PASSWORD=root
-PORT=9000
-DB_NAME=pesoappd_ocnew
-DATABASE_URL=mysql://root:root@127.0.0.1:3306/pesoappd_ocnew
+DATABASE_URL=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_BUCKET_NAME=
-PESO_APP_TEMP=https://pesoapp.ph/peso_beta/api/5.2.16/url/
-NODE_VERSION=18.16.0
+PESO_APP_TEMP=
+NODE_VERSION=
+PUSHER_APP_ID=
+PUSHER_KEY=
+PUSHER_SECRET=
+PUSHER_CLUSTER=
