--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "express-async-handler": "^1.2.0",
     "mariadb": "^3.2.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
